Added additional endpoints for light
